Fix gap and key

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -82,8 +82,8 @@
   height: 100vh;
   padding: 1rem 2rem 2rem 0;
   display: grid;
-  grid-template-rows: 1fr 10fr;
-  gap: 1rem;
+  grid-template-rows: 1fr 15fr;
+  // gap: 0.5rem;
   z-index: 0;
 
   .header {
@@ -323,7 +323,7 @@
   .dashboard {
     width: 100vw;
     padding: 1rem;
-    grid-template-rows: 0.9fr 7fr;
+    grid-template-rows: 1fr 15fr;
 
     .header {
       justify-content: space-between;
